--- a/about.html
+++ b/about.html
@@ -44,7 +44,6 @@
 				<nav id="nav-menu-container" class="ml-auto">
 					<ul class="nav-menu white">
 						<li class=""><a href="index.html">Home</a></li>
-						<li><a class="active" href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
 						
 					</ul>
@@ -82,15 +81,15 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							My name is Lovely Mae Tablada. I am a Second year College Taking Bachelor in Information and Technology.
-I can say that I am a responsible and a hard-working student. Moreover, being a sociable person, I have many friends since I like to communicate with people and get to know new interesting individuals. I enjoy my time at school: it is really nice to study, the students are very friendly and ready to help. The atmosphere cannot but make me want to go there every time. I like to receive and deal with challenging tasks. I am a very enthusiastic student and I think this is a strong point of mine.
+							My name is Lovely Mae Tablada. I am Taking my last year in Bachelor in Information and Technology degree.
+I can say that I am a responsible and a hard-working student. Moreover, being an ambivert person, I have just few friends that i can trust truly. I enjoy my time at school: it is really nice to study, My classmates are friendly and ready to help the atmosphere makes me want to go there every time. I like to receive and deal with challenging tasks but also gets frustrated if i cannot solve it. I am a very enthusiastic student and I think this is a strong point of mine.
 <br><br>
-My friends say that I am a very funny and an interesting girl with a good sense of humor. As soon as I meet new people who are happy to meet me, I feel extremely comfortable with them. I believe that friendship is one of the most important values in human life. We exchange new ideas, find many interesting things about each other and experience new things. I appreciate friendship and people who surround me.
+My friends say that I am a very funny and an interesting girl with a good sense of humor. I actually being talkative infront of my friends and to those people I'm comfortable but, I'm still friendly eventhough i don't speak a lot with new people. I believe that friendship is one of the most important values in human life. We exchange new ideas, find many interesting things about each other and experience new things. I appreciate friendship and people who surround me.
 						</p>
 						<p>
-						Meeting new people who support all my efforts to grow and develop my skills not only in the subjects but also in my hobbies gives me a lot of energy. Many of those friends who surround me now I met on the street while doing my hobby. I’m in love with photography, so the thing I love doing so much became even more enjoyable. I decided to take beautiful pictures of accidental people and share these photos with them by emails or in social media. I feel happiness inside seeing how happy they are looking at the pictures where they are walking or sitting somewhere in the park. In this way, Liza became my best friend and we both believe that we meant to meet because she studies the same classes and we have similar life goals. 
+						Meeting new people who support all my efforts to grow and develop my skills not only in the subjects but also in my hobbies gives me a lot of energy. Many of those friends who surround me now I met on the street while doing my hobby. I’m in love with Camping, so the thing I love doing so much became even more enjoyable. I decided to take adventures and to take a rest in a stressful life. I feel happiness inside seeing how beatiful the earth is going in adventure cleanse my soul and help me become more calm and appreciate things. In this way, I encourage myself to do good job in my life even if I'm not good enough with other things I want my future me to enjoy things more freely with the path i wanted to take and that is when I will say that my life is a goal. 
 <br><br>
-The goal I’m currently striving for is to make this world a better place to live in by starting the changes with myself. Sure, I’ve had bad experiences in my life too, but this is exactly what made me the way I am now: grateful, full of love, with a desire to study well because it will help me become a successful person in future and have a high quality of life. I believe that it is manifesting day by day and I feel even more responsibility for what I do and where I go. With all I already have, I know that I’m on the right path and I will do my best to inspire others to live the way they feel like living as well. 
+The goal I’m currently striving for is to make this world a better place to live in by starting the changes with myself. Sure, I’ve had bad experiences in my life too, but this is exactly what made me the way I am now: grateful, full of love, with a desire to study well because it will help me become a successful person in future and have a high quality of life. I believe that it is manifesting day by day and I feel even more responsible for what I do and my future. With all I already have, I know that I’m on the right path and I will do my best to inspire others to live the way they feel like living as well. I have a lot of problems but i don't let that eat my life becoming a sad and stressful person. I always tell myself to become optimistic since everything has a reason and liife is too short to focus in bad things. 
 						</p>
 					</div>
 					
