--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 	<!-- End Header Area -->
 
 	<!-- start banner Area -->
-<!-- 	<section class="banner-area relative">
+	<section class="banner-area relative">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
@@ -65,7 +65,7 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<!-- End banner Area -->
 
 	<!-- Start About Area -->
@@ -76,9 +76,7 @@
 					<img class="img-fluid" src="img/img2.jpg" alt="jkh">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
-					<div class="section-title">
-						<h2 style="color:#fff;">about myself</h2>
-					</div>
+					
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
 							My name is Lovely Mae Tablada. I am Taking my last year in Bachelor in Information and Technology degree.
