--- a/about.html
+++ b/about.html
@@ -79,8 +79,9 @@
 					
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							My name is Lovely Mae Tablada. I am Taking my last year in Bachelor in Information and Technology degree.
-I can say that I am a responsible and a hard-working student. Moreover, being an ambivert person, I have just few friends that i can trust truly. I enjoy my time at school: it is really nice to study, My classmates are friendly and ready to help the atmosphere makes me want to go there every time. I like to receive and deal with challenging tasks but also gets frustrated if i cannot solve it. I am a very enthusiastic student and I think this is a strong point of mine.
+							My name is Lovely Mae Tablada. I am Graduate in Bachelor in Information and Technology degree. I learn different programming languages like Java, PHP, Python,C#, Ionic Angular in my course and also through self study, and watching youtube videos. The experience of being a programmer in group activity also help develop my knowledge. I prefer front end development since I'm more on designing website and application.
+							<br><br>
+During my college years I can say that I am a responsible and a hard-working student. Moreover, being an ambivert person, I have just few friends that i can trust truly. I enjoy my time at school: it is really nice to study, My classmates are friendly and ready to help the atmosphere makes me want to go there every time. I like to receive and deal with challenging tasks but also gets frustrated if i cannot solve it. I am a very enthusiastic student and I think this is a strong point of mine.
 <br><br>
 My friends say that I am a very funny and an interesting girl with a good sense of humor. I actually being talkative infront of my friends and to those people I'm comfortable but, I'm still friendly eventhough i don't speak a lot with new people. I believe that friendship is one of the most important values in human life. We exchange new ideas, find many interesting things about each other and experience new things. I appreciate friendship and people who surround me.
 						</p>
