--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
 							<li data-filter=".branding">Branding</li>
-							<li data-filter=".creative">Creative Work</li>
+							<li data-filter=".creative">Application</li>
 							<li data-filter=".web-design">Web Design</li>
 						</ul>
 					</div>
