--- a/portfolio.html
+++ b/portfolio.html
@@ -100,11 +100,11 @@
 								 <iframe width="560" height="315" src="https://www.youtube.com/embed/y881t8ilMyc" frameborder="0" allowfullscreen></iframe>
       							</iframe>
 							</div>
-							<div class="middle">
+							<!-- <div class="middle">
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="portfolio-details.html"></a> -->
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
