--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all application wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
