--- a/portfolio.html
+++ b/portfolio.html
@@ -98,14 +98,13 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								 <iframe width="300" height="315" src="gallery/solarconverter.mp4" frameborder="0" allowfullscreen></iframe>
-      							</iframe>
 							</div>
 							<!-- <div class="middle">
 								<h4>2D Vinyl Design</h4>
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a> -->
-						</div>
+						<!-- </div> -->
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
