--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
 								<div class="cat">Client Project</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a> -->
-						<!-- </div> -->
+						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
