--- a/portfolio.html
+++ b/portfolio.html
@@ -97,13 +97,12 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								 <iframe width="300" height="500" src="gallery/solarconverter.mp4" frameborder="0" allowfullscreen></iframe>
+								<img class="image img-fluid" src="gallery/solarconverter.mp4" alt="">
 							</div>
-							<!-- <div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+							<div class="middle">
+								<h4>Solar Planet Weigh Converter</h4>
+								<div class="cat">Ionic Angular</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a> -->
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
