--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/solarconverter.mp4" alt="">
+								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
 							<div class="middle">
 								<h4>Solar Planet Weigh Converter</h4>
