--- a/certificate.html
+++ b/certificate.html
@@ -59,7 +59,7 @@
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-white">
-						Portfolio
+						Certificates
 					</h1>
 				</div>
 			</div>
@@ -73,8 +73,8 @@
 			<div class="row d-flex justify-content-between align-items-end mb-80">
 				<div class="col-lg-6">
 					<div class="section-title">
-						<h2>Latest Works</h2>
-						<p>These are some of my works i made with passion and love<3.</p>
+						<h2>Certifications</h2>
+						<p>These are my certificates which proves that i attended and was trained with specific fields:).</p>
 					</div>
 				</div>
 
