--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li class=""><a class="active" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="certificates.html">Certificates</a></li>	
+						<li><a href="certificate.html">Certificates</a></li>	
 					</ul>
 				</nav>
 			</div>
