--- a/certificate.html
+++ b/certificate.html
@@ -74,7 +74,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Certifications</h2>
-						<p>These are my certificates which proves that i attended and was trained with specific fields:).</p>
+						<p>These are my certificates which proves that i participated and was trained with specific fields:).</p>
 					</div>
 				</div>
 
