--- a/certificate.html
+++ b/certificate.html
@@ -82,9 +82,6 @@
 					<div class="filters">
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
-							<li data-filter=".branding">Branding</li>
-							<li data-filter=".application">Application</li>
-							<li data-filter=".web-design">Web Design</li>
 						</ul>
 					</div>
 				</div>
@@ -92,11 +89,11 @@
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all application wow fadeInUp" data-wow-duration="2s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
+								<img class="image img-fluid" src="gallery/certificates/python.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Solar Planet Weigh Converter</h4>
