--- a/certificate.html
+++ b/certificate.html
@@ -96,8 +96,8 @@
 								<img class="image img-fluid" src="gallery/certificates/python.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>Solar Planet Weigh Converter</h4>
-								<div class="cat">Ionic Angular</div>
+								<h4>Python Essential Course</h4>
+								<div class="cat">Training</div>
 							</div>
 						</div>
 					</div>
