--- a/certificate.html
+++ b/certificate.html
@@ -105,11 +105,11 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
+								<img class="image img-fluid" src="gallery/certificates/hciacloud.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>Huawei Online Course</h4>
+								<div class="cat">HCIA-Cloud Service V2.2</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
