--- a/certificate.html
+++ b/certificate.html
@@ -118,11 +118,11 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w3.jpg" alt="">
+								<img class="image img-fluid" src="gallery/certificates/computecloudservices.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>Huawei Online Course</h4>
+								<div class="cat">Compute Cloud Services</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
@@ -131,7 +131,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="gallery/certificates/howtoace.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
