--- a/certificate.html
+++ b/certificate.html
@@ -134,8 +134,8 @@
 								<img class="image img-fluid" src="gallery/certificates/howtoace.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>How To Ace Your Job Interview </h4>
+								<div class="cat">Enrichment Webinar</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
