--- a/certificate.html
+++ b/certificate.html
@@ -127,7 +127,7 @@
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
@@ -140,11 +140,11 @@
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all  wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="gallery/certificates/nodejs.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
@@ -153,11 +153,11 @@
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="gallery/certificates/howtoace.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>2D Vinyl Design</h4>
