--- a/certificate.html
+++ b/certificate.html
@@ -81,7 +81,7 @@
 				<div class="col-lg-6">
 					<div class="filters">
 						<ul>
-							<li class="active" data-filter=".all">All Categories</li>
+							<!-- <li class="active" data-filter=".all">All Categories</li> -->
 						</ul>
 					</div>
 				</div>
