--- a/certificate.html
+++ b/certificate.html
@@ -220,7 +220,7 @@
 						<div class="footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
+							<a href="#"><i class="fa fa-linkedin"></i></a>
 							<a href="#"><i class="fa fa-behance"></i></a>
 						</div>
 					</div>
