--- a/certificate.html
+++ b/certificate.html
@@ -218,10 +218,10 @@
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/lovelymaetablada/"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-linkedin"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://www.linkedin.com/in/lovely-mae-tablada-301301210/"><i class="fa fa-linkedin"></i></a>
+							<a href="https://github.com/bokyot"><i class="fa fa-github"></i></a>
 						</div>
 					</div>
 				</div>
