--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
 					<ul class="nav-menu white">
 						<li class=""><a href="index.html">Home</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="certificate.html">Certificates</a></li>	
 						
 					</ul>
 				</nav>
