--- a/about.html
+++ b/about.html
@@ -132,3 +132,9 @@ The goal I’m currently striving for is to make this world a better place to li
 		</div>
 	</section>
 	<!-- End Contact Area -->
+
+	<script> 
+    $(function(){
+        $('#footer').load("footer.html"); 
+    });
+</script>
