--- a/index.html
+++ b/index.html
@@ -245,8 +245,4 @@ The goal I’m currently striving for is to make this world a better place to li
 
 
 
-<script> 
-    $(function(){
-        $('#footer').load("footer.html"); 
-    });
-</script>
+<link rel="import" href="footer.html">
