--- a/about.html
+++ b/about.html
@@ -30,6 +30,14 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script> 
+            $(function(){
+                $("#footerDiv").load("footer.html");
+            });  
+        </script>
 </head>
 
 <body>
@@ -101,8 +109,5 @@ The goal I’m currently striving for is to make this world a better place to li
 
 
 
-	<script> 
-    $(function(){
-        $('#footer').load("footer.html"); 
-    });
-</script>
+
+  <div id="footerDiv"></div>
