--- a/index.html
+++ b/index.html
@@ -74,15 +74,6 @@
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">It's me</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Lovely Mae Tablada</h1>
-					<a href="#" class="primary-btn" data-text="Know Me">
-						<span>K</span>
-						<span>n</span>
-						<span>o</span>
-						<span>w</span>
-						<span> </span>
-						<span>M</span>
-						<span>e</span>
-					</a>
 				</div>
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
 					<img class="img-fluid" src="img/pic.png" alt="<3">
@@ -145,7 +136,7 @@
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
 							<li data-filter=".branding">Branding</li>
-							<li data-filter=".creative">Creative Work</li>
+							<li data-filter=".application">Application</li>
 							<li data-filter=".web-design">Web Design</li>
 						</ul>
 					</div>
@@ -154,17 +145,16 @@
 
 			<div class="filters-content">
 				<div class="row grid">
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all application wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w1.jpg" alt="">
+								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>Solar Planet Weigh Converter</h4>
+								<div class="cat">Ionic Angular</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
