--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li class=""><a class="active" href="index.html">Home</a></li>
+						<li><a class="active" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="certificate.html">Certificates</a></li>	
