--- a/about.html
+++ b/about.html
@@ -45,9 +45,10 @@
 				</div>
 				<nav id="nav-menu-container" class="ml-auto">
 					<ul class="nav-menu white">
-						<li class=""><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a class="active" href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="certificate.html">Certificates</a></li>	
+						<li><a href="certificate.html">Certificates</a></li>
 						
 					</ul>
 				</nav>
