--- a/index.html
+++ b/index.html
@@ -47,18 +47,19 @@
 
 
 	<!-- Start Header Area -->
-	<header id="header">
+````<header id="header" class="dark">
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
 					<h2 style="font-family:Vladimir Script; font-size:60px; color:#e45447;">Lovely</h2>
 				</div>
-				<nav id="nav-menu-container">
-					<ul class="nav-menu">
-						<li><a class="active" href="index.html">Home</a></li>
+				<nav id="nav-menu-container" class="ml-auto">
+					<ul class="nav-menu white">
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="certificate.html">Certificates</a></li>	
+						<li><a class="active" href="certificate.html">Certificates</a></li>	
+						
 					</ul>
 				</nav>
 			</div>
