add nw certificate

--- a/certificate.html
+++ b/certificate.html
@@ -146,11 +146,11 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/certificates/nodejs.png" alt="">
+								<img class="image img-fluid" src="gallery/certificates/videoediting.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>Strategies for Effective Video Editing</h4>
+								<div class="cat">Video Editing Enrichment Webinar</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
@@ -159,11 +159,11 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/certificates/howtoace.png" alt="">
+								<img class="image img-fluid" src="gallery/certificates/edge.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>EDGE 2022: Pioneers of Tommorow</h4>
+								<div class="cat">JA Philippines</div>
 							</div>
 							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
