--- a/about.html
+++ b/about.html
@@ -78,6 +78,8 @@
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
 					<img class="img-fluid" src="img/img2.jpg" alt="jkh">
+					<br>
+					<img class="img-fluid" src="img/img1.jpg" alt="jkh">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					
