--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 	<!-- start banner Area -->
 	<section class="banner-area relative">
 		<div class="container">
-			<div class="row d-flex align-items-center justify-content-center">
+			<div class="row align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-white">
 						About Me
@@ -71,6 +71,24 @@
 		</div>
 	</section>
 	<!-- End banner Area -->
+
+	<!-- Start Resume Area -->
+	<section class="work-area section-gap-top section-gap-bottom-90" id="work">
+		<div class="container">
+			<div class="row d-flex justify-content align-items-end mb-80">
+				<div class="col-sm-3">
+					<div class="section-title">
+						<h2>Resume</h2>
+					</div>
+
+					<p></p>
+		
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Resume Area -->
 
 	<!-- Start About Area -->
 	<section class="about-area section-gap">
