--- a/about.html
+++ b/about.html
@@ -75,16 +75,55 @@
 	<!-- Start Resume Area -->
 	<section class="work-area section-gap-top section-gap-bottom-90" id="work">
 		<div class="container">
-			<div class="row d-flex justify-content align-items-end mb-80">
-				<div class="col-sm-3">
-					<div class="section-title">
-						<h2>Resume</h2>
-					</div>
+			<div class="row">
+			
+				<div class="col-md-4">
+					
+						<h3 style="color:#dc3545;">Education</h3>
+						<br>
+						<h5 >College</h5>
+						<p>BACHELORS OF SCIENCE IN INFORMATION TECHNOLOGY</p>
+						<p>STI WEST NEGROS UNIVERSITY</p>
 
-					<p></p>
-		
-					</div>
+
+						<h5>Senior High School</h5>
+						<p>INFORMATION TECHNOLOGY IN MOBILE APPLICATION
+						AND WEB DEVELOPMENT (ITMAWD)</p>
+						<p>STI WEST NEGROS UNIVERSITY</p>
+			
 				</div>
+
+
+				<div class="col-md-3">
+
+					<h3 style="color:#dc3545;">Personal Skills</h3>
+					<br>
+					<p>Fast learner</p>
+					<p>Creativity</p>
+					<p>Logical Thinking</p>
+					<p>Critical Thinking</p>
+					<p>Communication Skill</p>
+					<p>Interpersonal Skill</p>
+		
+				</div>
+
+				<div class="col-md-5">
+
+					<h3 style="color:#dc3545;">Professional Skills</h3>
+					<br>
+					<p>Knowldege with programming languages PHP, JAVA, C#, JavaScript.</p>
+					<p>Basic Knowledge in Ionic Angular and Python</p>
+					<p>Data Base Management</p>
+					<p>Knowledgeable in handling Microsoft Office works.</p>
+					<p>can talk in English, Tagalog, and Hiligaynon</p>
+					<p>Photoshop and Video editing and Cascading Style Sheet(CSS)</p>
+					<p>Bootstrap Framework of CSS</p>
+					<p>HyperText Markup Language</p>
+					<p>Responsive Designs</p>
+		
+				</div>
+
+
 			</div>
 		</div>
 	</section>
