--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">It's me</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Lovely Mae Tablada</h1>
-					<h3>An aspiring Front-end Developer</h3>
+					<h3 class="wow fadeInUp">An aspiring Front-end Developer</h3>
 				</div>
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
 					<img class="img-fluid" src="img/pic.png" alt="<3">
