--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<div class="filters">
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
-							<li data-filter=".branding">Branding</li>
+							<li data-filter=".photoshop">Photoshop</li>
 							<li data-filter=".application">Application</li>
 							<li data-filter=".web-design">Web Design</li>
 						</ul>
