--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							<li class="active" data-filter=".all">All Categories</li>
 							<li data-filter=".photoshop">Photoshop</li>
 							<li data-filter=".application">Application</li>
-							<li data-filter=".web-design">Web Design</li>
+							<li data-filter=".website">Website</li>
 						</ul>
 					</div>
 				</div>
