--- a/portfolio.html
+++ b/portfolio.html
@@ -101,22 +101,21 @@
 								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
 							<div class="middle">
-								<h4>Solar Planet Weigh Converter</h4>
-								<div class="cat">Ionic Angular</div>
+								<h4>Solar Planet Weigh Converter(Ionic Angular)</h4>
+								<div class="cat">Activity Project</div>
 							</div>
 						</div>
 					</div>
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all website branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
 							</div>
 							<div class="middle">
-								<h4>2D Vinyl Design</h4>
-								<div class="cat">Client Project</div>
+								<h4>iClinic (Html,CSS, & Bootstrap)</h4>
+								<div class="cat">Activity Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.4s">
