--- a/portfolio.html
+++ b/portfolio.html
@@ -102,10 +102,11 @@
 							</div>
 							<div class="middle">
 								<h4>Solar Planet Weigh Converter(Ionic Angular)</h4>
-								<div class="cat">Activity Project</div>
+								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
 					</div>
+					
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all website branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
 							<div class="thumb">
@@ -114,10 +115,11 @@
 							</div>
 							<div class="middle">
 								<h4>iClinic (Html,CSS, & Bootstrap)</h4>
-								<div class="cat">Activity Project</div>
+								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
 					</div>
+
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.4s">
 						<div class="relative">
 							<div class="thumb">
