--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
 							<div class="middle">
-								<h5>Solar Planet Weigh Converter(Ionic Angular)</h5>
+								<p>Solar Planet Weigh Converter(Ionic Angular)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
@@ -164,10 +164,10 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
+								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
 							</div>
 							<div class="middle">
-								<h5>iClinic (Html,CSS, & Bootstrap)</h5>
+								<p>iClinic (Html,CSS, & Bootstrap)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
