--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 					<div class="filters">
 						<ul>
 							<li class="active" data-filter=".all">All Categories</li>
-							<li data-filter=".photoshop">Photoshop</li>
+							<li data-filter=".responsive">Responsive</li>
 							<li data-filter=".application">Application</li>
 							<li data-filter=".website">Website</li>
 						</ul>
