--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
 								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
 							<div class="middle">
-								<p>Solar Planet Weigh Converter(Ionic Angular)</p>
+								<p style="color#fff">Solar Planet Weigh Converter(Ionic Angular)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
@@ -114,7 +114,7 @@
 								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
 							</div>
 							<div class="middle">
-								<p>iClinic (Html,CSS, & Bootstrap)</p>
+								<p style="color#fff">iClinic (Html,CSS, & Bootstrap)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
