--- a/about.html
+++ b/about.html
@@ -83,13 +83,13 @@
 						<br>
 						<h5 >College</h5>
 						<p>BACHELORS OF SCIENCE IN INFORMATION TECHNOLOGY</p>
-						<p>STI WEST NEGROS UNIVERSITY</p>
+						<p>STI WEST NEGROS UNIVERSITY</p><p>2018-2022</p>
 
 
 						<h5>Senior High School</h5>
 						<p>INFORMATION TECHNOLOGY IN MOBILE APPLICATION
 						AND WEB DEVELOPMENT (ITMAWD)</p>
-						<p>STI WEST NEGROS UNIVERSITY</p>
+						<p>STI WEST NEGROS UNIVERSITY</p><p>2016-2018</p>
 			
 				</div>
 
@@ -116,8 +116,8 @@
 					<p>Data Base Management</p>
 					<p>Knowledgeable in handling Microsoft Office works.</p>
 					<p>can talk in English, Tagalog, and Hiligaynon</p>
-					<p>Photoshop and Video editing and Cascading Style Sheet(CSS)</p>
-					<p>Bootstrap Framework of CSS</p>
+					<p>Photoshop and Video editing</p>
+					<p>Bootstrap Framework of CSS and Cascading Style Sheet(CSS)</p>
 					<p>HyperText Markup Language</p>
 					<p>Responsive Designs</p>
 		
