--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
 							<div class="middle">
-								<p style="color#fff">Solar Planet Weigh Converter(Ionic Angular)</p>
+								<p style="color: #fff">Solar Planet Weigh Converter(Ionic Angular)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
@@ -167,7 +167,7 @@
 								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
 							</div>
 							<div class="middle">
-								<p style="color#fff">iClinic (Html,CSS, & Bootstrap)</p>
+								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
 						</div>
