--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
 								<div class="cat">School Activity Project</div>
 							</div>
+							<a class="overlay" href="#"></a>
 						</div>
 					</div>
 				</div>
