--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 			
 				<div class="col-md-4">
 					
-						<h3 style="color:#dc3545;">Education</h3>
+						<h3 style="color:#90acd1;">Education</h3>
 						<br>
 						<h5 >College</h5>
 						<p>BACHELORS OF SCIENCE IN INFORMATION TECHNOLOGY</p>
@@ -96,7 +96,7 @@
 
 				<div class="col-md-3">
 
-					<h3 style="color:#dc3545;">Personal Skills</h3>
+					<h3 style="color:#90acd1;">Personal Skills</h3>
 					<br>
 					<p>Fast learner</p>
 					<p>Creativity</p>
@@ -109,7 +109,7 @@
 
 				<div class="col-md-5">
 
-					<h3 style="color:#dc3545;">Professional Skills</h3>
+					<h3 style="color:#90acd1;">Professional Skills</h3>
 					<br>
 					<p>Knowldege with programming languages PHP, JAVA, C#, JavaScript.</p>
 					<p>Basic Knowledge in Ionic Angular and Python</p>
