--- a/about.html
+++ b/about.html
@@ -83,13 +83,13 @@
 						<br>
 						<h5 >College</h5>
 						<p>BACHELORS OF SCIENCE IN INFORMATION TECHNOLOGY</p>
-						<p>STI WEST NEGROS UNIVERSITY</p><p>2018-2022</p>
+						<p>STI WEST NEGROS UNIVERSITY</p><p style="color:#dc3545">2018-2022</p>
 
 
 						<h5>Senior High School</h5>
 						<p>INFORMATION TECHNOLOGY IN MOBILE APPLICATION
 						AND WEB DEVELOPMENT (ITMAWD)</p>
-						<p>STI WEST NEGROS UNIVERSITY</p><p>2016-2018</p>
+						<p>STI WEST NEGROS UNIVERSITY</p><p style="color:#dc3545">2016-2018</p>
 			
 				</div>
 
