--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@ The goal I’m currently striving for is to make this world a better place to li
 						</div>
 						<div class="footer-social">
 							<a href="https://www.facebook.com/lovelymaetablada/"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>
 							<a href="https://www.linkedin.com/in/lovely-mae-tablada-301301210/"><i class="fa fa-linkedin"></i></a>
 							<a href="https://github.com/bokyot"><i class="fa fa-github"></i></a>
 						</div>
