--- a/certificate.html
+++ b/certificate.html
@@ -39,7 +39,7 @@
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
-					<h2 style="font-family:Vladimir Script; font-size:60px; color:#e45447;">Lovely</h2>
+					<img src="img/logo.png">
 				</div>
 				<nav id="nav-menu-container" class="ml-auto">
 					<ul class="nav-menu white">
