--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
 							</div>
 							<div class="middle">
 								<p style="color: #fff">Solar Planet Weigh Converter(Ionic Angular)</p>
-								<div class="cat">School Activity Project</div>
+								<div class="cat">My first application i created using Ionic language</div>
 							</div>
 					</div>
 				</div>
@@ -115,7 +115,7 @@
 							</div>
 							<div class="middle">
 								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
-								<div class="cat">School Activity Project</div>
+								<div class="cat">This is the front-end design i did in our Activity Project in school</div>
 							</div>
 						</div>
 					</div>
