--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
 							</div>
 							<div class="middle">
 								<p style="color: #fff">Solar Planet Weigh Converter(Ionic Angular)</p>
-								<div class="cat">My first application i created using Ionic language</div>
+								<div class="cat">This is the first application i created using Ionic language</div>
 							</div>
 					</div>
 				</div>
