--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
 				<div class="col-lg-6 about-left">
 					<img class="img-fluid" src="img/img2.jpg" alt="jkh">
 					<br>
-					<img class="img-fluid" src="img/img1.jpg" alt="jkh">
+					<img class="img-fluid" src="img/camp.jpg" alt="jkh">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					
