--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<h3 class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="2s" style="color:#e45447;">An aspiring Front-end Developer</h3>
 				</div>
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img class="img-fluid" src="img/pic.png" alt="<3">
+					<img class="img-fluid" src="img/pics.png" alt="<3">
 				</div>
 			</div>
 		</div>
