--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
 	<section class="home-banner-area">
 		<div class="container">
 			<div class="row fullscreen d-flex align-items-center">
+
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
 					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">It's me</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Lovely Mae Tablada</h1>
 					<h3 class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="2s" style="color:#e45447;">An aspiring Front-end Developer</h3>
 				</div>
-				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img class="img-fluid" src="img/pics.png" alt="<3">
+				<div class="banner-img float-end">
+					<img class="img-fluid" src="img/.png" alt="<3">
 				</div>
 			</div>
 		</div>
