--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							</div>
 							<div class="middle">
 								<p style="color: #fff">Solar Planet Weigh Converter(Ionic Angular)</p>
-								<div class="cat">School Activity Project</div>
+								<div class="cat">This is the first application i created using Ionic language</div>
 							</div>
 					</div>
 				</div>
@@ -169,7 +169,7 @@
 							</div>
 							<div class="middle">
 								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
-								<div class="cat">School Activity Project</div>
+								<div class="cat">This is the front-end design i did in our Activity Project in school</div>
 							</div>
 							<a class="overlay" href="#"></a>
 						</div>
