--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<h3 class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="2s" style="color:#e45447;">An aspiring Front-end Developer</h3>
 				</div>
 				<div class="banner-img align-items-center">
-					<img class="img-fluid" src="img/img.png" alt="<3">
+					<img class="img-fluid" src="img/profile.png" alt="<3">
 				</div>
 			</div>
 		</div>
