--- a/index.html
+++ b/index.html
@@ -161,6 +161,21 @@
 					</div>
 				</div>
 
+				<div class="single-work col-lg-4 col-md-6 col-sm-12 all website branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
+							</div>
+							<div class="middle">
+								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
+								<div class="cat">I learn the syntax of Django python language which is specialized in Web Development,I learn how to create database using sql and create user login and registration and how to make a CRUD using a WebFramework Django. I really wanted to work on site of the company to learn more and experience the reality in working at the office. I hope that future trainee will do more good and experience better since pandemic is slowly gone. </div>
+							</div>
+							<a class="overlay" href="#"></a>
+						</div>
+					</div>
+				</div>
+
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all website branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
 							<div class="thumb">
