--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
+								<iframe width="560" height="315" src="gallery/svtc.mp4" frameborder="0" allowfullscreen></iframe>
+      							</iframe>
 							</div>
 							<div class="middle">
 								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
