--- a/svtc.html
+++ b/svtc.html
@@ -34,8 +34,7 @@
 
 <body>
 
-	<!-- Start Header Area -->
-	<header id="header" class="dark">
+<header id="header" class="dark">
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
@@ -43,17 +42,13 @@
 				</div>
 				<nav id="nav-menu-container" class="ml-auto">
 					<ul class="nav-menu white">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a class="active" href="portfolio.html">Portfolio</a></li>
-						<li><a href="certificate.html">Certificates</a></li>
-						
+						<li><a class="active" href="index.html">Back Home</a></li>	
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</header>
-	<!-- End Header Area -->
+
 
 	<!-- start banner Area -->
 	<section class="banner-area relative">
@@ -61,7 +56,7 @@
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-white">
-						Portfolio
+						SPRING VALLEY TECH CORP - FIRST PROJECT
 					</h1>
 				</div>
 			</div>
@@ -70,10 +65,11 @@
 	<!-- End banner Area -->
 
 
-	<div class="middle">
-								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
-								<div class="cat">I learn the syntax of Django python language which is specialized in Web Development,I learn how to create database using sql and create user login and registration and how to make a CRUD using a WebFramework Django. I really wanted to work on site of the company to learn more and experience the reality in working at the office. I hope that future trainee will do more good and experience better since pandemic is slowly gone. </div>
-							</div>
+	<div style="background-color: #fff; margin: 10px;">
+					<h1 style="color: #e45447">iClinic (Html,CSS, & Bootstrap)</h1>
+					<h3 class="cat">I learn the syntax of Django python language which is specialized in Web Development,I learn how to create database using sql and create user login and registration and how to make a CRUD using a WebFramework Django. I really wanted to work on site of the company to learn more and experience the reality in working at the office and do more better and observe our seniors. I hope that future trainee will do more good and experience better since pandemic is slowly gone. 
+					</h3>
+				</div>
 	
 	
 	<!-- Start Contact Area -->
