--- a/solar.html
+++ b/solar.html
@@ -30,24 +30,11 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
-
-
-	
 </head>
 
 <body>
 
-	<!-- Start Preloader Area -->
-	<div class="preloader-area">
-		<div class="loader-box">
-			<div class="loader"></div>
-		</div>
-	</div>
-	<!-- End Preloader Area -->
-
-
-	<!-- Start Header Area -->
-	<header id="header" class="dark">
+<header id="header" class="dark">
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
@@ -55,31 +42,22 @@
 				</div>
 				<nav id="nav-menu-container" class="ml-auto">
 					<ul class="nav-menu white">
-						<li><a class="active" href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="certificate.html">Certificates</a></li>	
-						
+						<li><a class="active" href="index.html">Back Home</a></li>	
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</header>
-	<!-- End Header Area -->
 
 
-	<!-- start banner Area -->	
-	<section class="home-banner-area">
+	<!-- start banner Area -->
+	<section class="banner-area relative">
 		<div class="container">
-			<div class="row fullscreen d-flex align-items-center">
-
-				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
-					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">It's me</div>
-					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Lovely Mae Tablada</h1>
-					<h3 class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="2s" style="color:#e45447;">An aspiring Front-end Developer</h3>
-				</div>
-				<div class="banner-img align-items-center">
-					<img class="img-fluid" src="img/profile.png" alt="<3">
+			<div class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h1 class="text-white">
+						SOLAR WEIGH CONVERTER - FIRST IONIC ANGULAR PROJECT
+					</h1>
 				</div>
 			</div>
 		</div>
@@ -87,111 +65,11 @@
 	<!-- End banner Area -->
 
 
-	
-	<!-- Start About Area -->
-	<section class="about-area section-gap">
-		<div class="container">
-			<div class="row align-items-center justify-content-between">
-				<div class="col-lg-6 about-left">
-					<img class="img-fluid" src="img/img2.jpg" alt="">
+	<div style="background-color: #fff; margin: 10px;">
+					<h3 class="cat">
+						This is the first application i ever created using Ionic and angular language.
+					</h3>
 				</div>
-				<div class="col-lg-5 col-md-12 about-right">
-					<div class="section-title">
-						<h2 style="color:white;">about myself</h2>
-					</div>
-					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
-						<p>
-							My name is Lovely Mae Tablada. I am Graduate in Bachelor in Information and Technology degree. I learn different programming languages like Java, PHP, Python,C#, Ionic Angular in my course and also through self study, and watching youtube videos. The experience of being a programmer in group activity also help develop my knowledge. I prefer front end development since I'm more on designing website and application.
-							<br><br>
-						</p>
-					</div>
-					<a href="about.html" class="primary-btn white" data-text="More Info">
-						<span>M</span>
-						<span>o</span>
-						<span>r</span>
-						<span>e</span>
-						<span> </span>
-						<span>I</span>
-						<span>n</span>
-						<span>f</span>
-						<span>o</span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End About Area -->
-
-
-	<!-- Start Work Area Area -->
-	<section class="work-area section-gap-top section-gap-bottom-90" id="work">
-		<div class="container">
-			<div class="row d-flex justify-content-between align-items-end mb-80">
-				<div class="col-lg-6">
-					<div class="section-title">
-						<h2>Latest Works</h2>
-						<p>These are some of my works i made with passion and love<3.</p>
-					</div>
-				</div>
-
-				<div class="col-lg-6">
-					<div class="filters">
-						<ul>
-							<li class="active" data-filter=".all">All Categories</li>
-							<li data-filter=".responsive">Responsive</li>
-							<li data-filter=".application">Application</li>
-							<li data-filter=".website">Website</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-
-			<div class="filters-content">
-				<div class="row grid">
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all application wow fadeInUp" data-wow-duration="2s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
-							</div>
-							<a class="overlay" href="solar.html"></a>
-					</div>
-				</div>
-
-
-	
-
-					<div class="single-work col-lg-4 col-md-6 col-sm-12 all website branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
-							</div>
-							<a class="overlay" href="iclinic.html"></a>
-						</div>
-					</div>
-
-
-			<div class="single-work col-lg-3 col-md-9 col-sm-12 all responsive branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-								<iframe width="400" height="315" src="gallery/svtc.mp4" frameborder="1" allowfullscreen></iframe>
-      							</iframe>
-							</div>
-							<a class="overlay" href="svtc.html"></a>
-						</div>
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<!-- End Work Area Area -->
-
-
-
 	
 	
 	<!-- Start Contact Area -->
