--- a/iclinic.html
+++ b/iclinic.html
@@ -70,6 +70,7 @@
 					<h3 class="cat">
 						This is the front-end design i did in our Activity Project in school
 					</h3>
+	</div>
 	
 	<!-- Start Contact Area -->
 	<section class="contact-area section-gap">
