--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
 	<!-- End banner Area -->
 
 	<!-- Start Work Area Area -->
-	<section class="work-area section-gap-top section-gap-bottom-90" id="work">
+		<section class="work-area section-gap-top section-gap-bottom-90" id="work">
 		<div class="container">
 			<div class="row d-flex justify-content-between align-items-end mb-80">
 				<div class="col-lg-6">
@@ -100,12 +100,12 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="gallery/solarconverter.gif" alt="">
 							</div>
-							<div class="middle">
-								<p style="color: #fff">Solar Planet Weigh Converter(Ionic Angular)</p>
-								<div class="cat">This is the first application i created using Ionic language</div>
-							</div>
+							<a class="overlay" href="solar.html"></a>
 					</div>
 				</div>
+
+
+	
 
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all website branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
 						<div class="relative">
@@ -113,12 +113,22 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="gallery/iclinic.gif" alt="">
 							</div>
-							<div class="middle">
-								<p style="color: #fff">iClinic (Html,CSS, & Bootstrap)</p>
-								<div class="cat">This is the front-end design i did in our Activity Project in school</div>
-							</div>
+							<a class="overlay" href="iclinic.html"></a>
 						</div>
 					</div>
+
+
+			<div class="single-work col-lg-3 col-md-9 col-sm-12 all responsive branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<iframe width="400" height="315" src="gallery/svtc.mp4" frameborder="1" allowfullscreen></iframe>
+      							</iframe>
+							</div>
+							<a class="overlay" href="svtc.html"></a>
+						</div>
+					</div>
+
 				</div>
 
 			</div>
