--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Works</h2>
-						<p>These are some of my works i made with passion and love<3.</p>
+						<p>These are some of my works i made with passion and love<3. Please click the projects to know what programming language I use when, and where I create it.</p>
 					</div>
 				</div>
 
