--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Lovely Mae Tablada</h1>
 					<h3 class="wow fadeInUp"  data-wow-duration="1s" data-wow-delay="2s" style="color:#e45447;">An aspiring Front-end Developer</h3>
 				</div>
-				<div class="banner-img align-items-center">
+				<div class="banner-img">
 					<img class="img-fluid" src="img/profile.png" alt="<3">
 				</div>
 			</div>
