--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,8 @@
 			<div class="row">
 			
 				<div class="col-md-4">
-					
+						
+						<img class="img-fluid" src="img/profile.png" alt="<3">
 						<h3 style="color:#dc3545;">Education</h3>
 						<br>
 						<h5 >College</h5>
