--- a/portfolio.html
+++ b/portfolio.html
@@ -73,11 +73,19 @@
 	<!-- Start Resume Area -->
 	<section class="work-area section-gap-top section-gap-bottom-90" id="work">
 		<div class="container">
+
+			<div class="row">
+				<div class="col-lg-4">
+					<img class="img-fluid" src="img/profile.png" alt="<3">
+				</div>
+
+			</div>
+
 			<div class="row">
 			
 				<div class="col-md-4">
 						
-						<img class="img-fluid" src="img/profile.png" alt="<3">
+
 						<h3 style="color:#dc3545;">Education</h3>
 						<br>
 						<h5 >College</h5>
