--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,13 @@
 					<img class="img-fluid" src="img/profile.png" alt="<3">
 				</div>
 
+				<div class="col-lg-4"> 
+					<h3 style="color:#dc3545;">LOVELY MAE G. TABLADA</h3>
+				</div>
+
 			</div>
+
+			<br>
 
 			<div class="row">
 			
