--- a/portfolio.html
+++ b/portfolio.html
@@ -82,6 +82,7 @@
 				<div class="col-lg-4"> 
 					<h3 style="color:#dc3545;">LOVELY MAE G. TABLADA</h3>
 					<h2> Valladolid, Negros Occidental</h2>
+					<h2> tabladalovelymae@gmail.com</h2>
 				</div>
 
 			</div>
