--- a/portfolio.html
+++ b/portfolio.html
@@ -79,10 +79,14 @@
 					<img class="img-fluid" src="img/profile.png" alt="<3">
 				</div>
 
-				<div class="col-lg-4"> 
-					<h3 style="color:#dc3545;">LOVELY MAE G. TABLADA</h3>
+				<div class="col-lg-6"> 
+					<h2 style="color:#dc3545;">LOVELY MAE G. TABLADA</h2>
 					<h5> Valladolid, Negros Occidental</h5>
 					<h5> tabladalovelymae@gmail.com</h5>
+				</div>
+
+				<div class="col-lg-4">
+					<h3 style="color:#dc3545;">Work Experience</h3>
 				</div>
 
 			</div>
