--- a/portfolio.html
+++ b/portfolio.html
@@ -85,8 +85,10 @@
 					<h5> tabladalovelymae@gmail.com</h5>
 				</div>
 
-				<div class="col-lg-4">
+				<div class="col-lg-6">
 					<h3 style="color:#dc3545;">Work Experience</h3>
+					<h4>SPRING VALLEY - TECHNOLOGY AND INNOVATION</h4>
+					<p>Develop a simple program using Django web framework of Python</p>
 				</div>
 
 			</div>
