--- a/portfolio.html
+++ b/portfolio.html
@@ -85,10 +85,12 @@
 					<h5> tabladalovelymae@gmail.com</h5>
 				</div>
 
+				<br>
 				<div class="col-lg-6">
 					<h3 style="color:#dc3545;">Work Experience</h3>
 					<h4>SPRING VALLEY - TECHNOLOGY AND INNOVATION</h4>
-					<p>Develop a simple program using Django web framework of Python.</p>
+					<p>• Develop a simple program using Django web framework of Python.</p>
+					<p>• Develop a mini project as a front-end developer of the team using React js.</p>
 				</div>
 
 			</div>
